--- a/app/src/main/res/layout/measuring_layout1.xml
+++ b/app/src/main/res/layout/measuring_layout1.xml
@@ -140,6 +140,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/save_button"
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:layout_margin="16dp"
