--- a/app/src/main/res/layout/measuring_layout_old.xml
+++ b/app/src/main/res/layout/measuring_layout_old.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MeasuringActivity_old"
+    tools:context=".old.MeasuringActivity_old"
     tools:ignore="SpeakableTextPresentCheck">
 
     <com.jjoe64.graphview.helper.GraphViewXML
